--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 60px;
-  background-color: white;
+  background-color: transparent;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -13,13 +13,31 @@
 }
 
 .logo_box {
-  font-size: var(--font-size-small);
+  font-size: var(--font-size-normal);
+  font-weight: 900;
+  color: white;
+  font-family: "Roboto", sans-serif;
+}
+
+.nav_list {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav_list li {
+  padding: 2rem 2rem;
+  color: white;
+  font-size: var(--font-size-bit-small);
+  font-weight: 700;
+  cursor: pointer;
 }
 
 .login_button {
   outline: none;
   border: none;
-  background-color: var(--color-theme);
+  background-color: rgba(0, 0, 0, 0.1);
+  font-size: var(--font-size-bit-small);
+  font-weight: 700;
   color: white;
   padding: 5px 12px 3px 12px;
   border-radius: 16px;
