--- a/src/constant.css
+++ b/src/constant.css
@@ -7,4 +7,9 @@
   --font-size-little-title: 3rem;
   --font-size-title: 4rem;
   --color-theme: rgb(196, 4, 82);
+  --color-pink: #ff99c8;
+  --color-yellow: #fcf6bd;
+  --color-green: #d0f4de;
+  --color-blue: #a9def9;
+  --color-purple: #e4c1f9;
 }
