--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,7 +13,7 @@
 }
 
 .logo_box {
-  font-size: var(--font-size-normal);
+  font-size: var(--font-size-big);
   font-weight: 900;
   color: white;
   font-family: "Roboto", sans-serif;
@@ -27,7 +27,7 @@
 .nav_list li {
   padding: 2rem 2rem;
   color: white;
-  font-size: var(--font-size-bit-small);
+  font-size: var(--font-size-normal);
   font-weight: 700;
   cursor: pointer;
 }
@@ -36,7 +36,7 @@
   outline: none;
   border: none;
   background-color: rgba(0, 0, 0, 0.1);
-  font-size: var(--font-size-bit-small);
+  font-size: var(--font-size-normal);
   font-weight: 700;
   color: white;
   padding: 5px 12px 3px 12px;
