최신글, 인기글 리스트 컴포넌트 + 최신글 구성할 컴포넌트 2가지 제작

--- a/src/constant.css
+++ b/src/constant.css
@@ -12,4 +12,9 @@
   --color-green: #d0f4de;
   --color-blue: #a9def9;
   --color-purple: #e4c1f9;
+  --color-deep-blue: #3a86ff;
+  --color-deep-purple: #8338ec;
+  --color-deep-pink: #ff006e;
+  --color-deep-red: #fb5607;
+  --color-deep-yellow: #ffbe0b;
 }
