--- a/src/components/ArticleList/ArticleList.module.css
+++ b/src/components/ArticleList/ArticleList.module.css
@@ -26,13 +26,13 @@
 }
 
 .latest_box {
-  width: 70%;
-  padding: 6rem 5rem;
+  width: 65%;
+  padding: 6rem 3rem 6rem 5rem;
 }
 
 .hot_box {
-  width: 30%;
-  padding: 6rem 5rem 6rem 3rem;
+  width: 35%;
+  padding: 6rem 5rem 6rem 0;
 }
 
 h1 {
@@ -42,11 +42,12 @@ h1 {
 }
 
 .long_box {
-  margin: 2rem 0;
+  margin-top: 2rem;
 }
 
 .short_box {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: 2rem;
 }
