최신글 & 인기글 페이지 제작 + 관련 컴포넌트 연결 + 헤더 스크롤 시 스타일 변경 기능 추가

--- a/src/components/Mainpage/Mainpage.module.css
+++ b/src/components/Mainpage/Mainpage.module.css
@@ -4,7 +4,7 @@
   background-image: linear-gradient(
     to top right,
     var(--color-blue),
-    var(--color-purple)
+    var(--color-pink)
   );
 }
 
