--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,6 +10,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 .logo_box {
@@ -17,6 +18,7 @@
   font-weight: 900;
   color: white;
   font-family: "Roboto", sans-serif;
+  cursor: pointer;
 }
 
 .nav_list {
@@ -42,4 +44,19 @@
   padding: 5px 12px 3px 12px;
   border-radius: 16px;
   cursor: pointer;
+}
+
+.scrolled {
+  background-color: white;
+  border-bottom: 0.4px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+}
+
+.scrolled .nav_list li,
+.scrolled .logo_box {
+  color: rgba(50, 50, 50, 0.9);
+}
+
+.scrolled .login_button {
+  background-color: var(--color-blue);
 }
