--- a/src/components/ArticleList/ArticleList.module.css
+++ b/src/components/ArticleList/ArticleList.module.css
@@ -1,10 +1,10 @@
 .article_list {
-  width: 80%;
-  min-width: 1100px;
+  width: 70%;
+  min-width: 1200px;
   min-height: 85vh;
   height: auto;
-  margin-top: 8rem;
-  margin-bottom: 8rem;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 32px;
   display: flex;
@@ -21,7 +21,7 @@
   padding: 6rem 5rem 6rem 0;
 }
 
-h1 {
+.article_list h1 {
   font-size: var(--font-size-bit-big);
   color: rgb(50, 50, 50);
   margin-bottom: 2rem;
