--- a/src/components/ArticleView/ArticleView.module.css
+++ b/src/components/ArticleView/ArticleView.module.css
@@ -1,27 +1,111 @@
-.banner {
+.body {
   width: 100%;
-  height: 600px;
-  background-color: rgba(0, 0, 0, 0.7);
-  margin-top: 60px;
-}
-
-.banner_textbox {
-  height: 85%;
-  padding: 0 8%;
+  min-height: 100vh;
+  height: auto;
+  background-image: linear-gradient(
+    to right bottom,
+    var(--color-blue),
+    var(--color-pink)
+  );
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
-.subtitle {
-  font-size: var(--font-size-normal);
-  font-weight: 500;
-  color: var(--color-theme);
-  margin-bottom: 1rem;
+.main {
+  width: 70%;
+  min-width: 1200px;
+  min-height: 85vh;
+  height: auto;
+  margin-top: 12rem;
+  margin-bottom: 10rem;
+  background-color: white;
+  border-radius: 24px;
+  padding: 5rem 12rem;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.date_and_subject {
+  width: 100%;
+}
+
+.date {
+  font-size: var(--font-size-bit-small);
+  font-weight: 700;
+  color: rgba(50, 50, 50, 0.5);
+  margin-right: 1rem;
+}
+
+.subject {
+  font-size: var(--font-size-bit-small);
+  font-weight: 700;
+  color: var(--color-deep-blue);
 }
 
 .title {
   font-size: var(--font-size-little-title);
-  font-weight: 900;
-  color: white;
+  margin: 1rem 0;
+}
+
+.writer_and_data_box {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 1rem;
+  border-bottom: 0.1px solid rgba(0, 0, 0, 0.3);
+}
+
+.writer_box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.writer_image {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
+  border: 0.4px solid rgba(0, 0, 0, 0.1);
+}
+
+.writer_data {
+  margin-left: 1.2rem;
+}
+
+.writer_text {
+  font-size: var(--font-size-bit-small);
+  color: rgba(50, 50, 50, 0.5);
+}
+
+.writer_name {
+  font-size: var(--font-size-bit-big);
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.data_box {
+  display: flex;
+  flex-direction: row;
+}
+
+.data_box div:nth-of-type(1) {
+  margin-right: 2rem;
+}
+
+.data_title {
+  font-size: var(--font-size-small);
+  color: rgba(50, 50, 50, 0.6);
+}
+
+.data_text {
+  font-size: var(--font-size-normal);
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.article {
+  font-size: var(--font-size-normal);
+  padding: 5rem 3rem;
 }
