--- a/src/components/Signup/Signup.module.css
+++ b/src/components/Signup/Signup.module.css
@@ -1,6 +1,6 @@
 .body {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-image: linear-gradient(
     to right bottom,
     var(--color-blue),
@@ -12,14 +12,14 @@
 }
 
 .main {
-  width: 70%;
-  min-width: 1200px;
-  height: 83vh;
+  width: 1200px;
+  height: 660px;
   margin-top: 6rem;
   background-color: white;
   border-radius: 32px;
   display: flex;
   flex-direction: row;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .left,
@@ -30,7 +30,7 @@
 .main_image {
   width: 100%;
   height: 100%;
-  border-radius: 32px 0 0 32px;
+  border-radius: 30px 0 0 30px;
 }
 
 .right {
@@ -69,6 +69,12 @@
   padding: 0.6rem;
 }
 
+.signup_form input:focus {
+  outline: none;
+  border: 2px solid var(--color-blue);
+  box-shadow: 0 0 2px var(--color-blue);
+}
+
 .submit_button {
   width: 100%;
   height: 50px;
@@ -79,7 +85,6 @@
   font-size: var(--font-size-big);
   font-weight: 700;
   border-radius: 8px;
-  cursor: pointer;
 }
 
 .email_box {
