댓글 입력창 & 댓글 아이템 제작 + 게시글 보기 페이지와 연결

--- a/src/components/ArticleList/ArticleList.module.css
+++ b/src/components/ArticleList/ArticleList.module.css
@@ -1,6 +1,6 @@
 .article_list {
   width: 70%;
-  min-width: 1200px;
+  min-width: 120rem;
   min-height: 85vh;
   height: auto;
   margin-top: 10rem;
