--- a/src/components/ArticleView/ArticleView.module.css
+++ b/src/components/ArticleView/ArticleView.module.css
@@ -1,7 +1,6 @@
 .body {
   width: 100%;
   min-height: 100vh;
-  height: auto;
   background-image: linear-gradient(
     to right bottom,
     var(--color-blue),
@@ -13,16 +12,19 @@
 }
 
 .main {
-  width: 70%;
-  min-width: 1200px;
+  width: 100rem;
   min-height: 85vh;
   height: auto;
   margin-top: 12rem;
   margin-bottom: 10rem;
   background-color: white;
   border-radius: 24px;
-  padding: 5rem 12rem;
+  padding: 7.5rem 10rem;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.article_data_box {
+  padding: 0 2.5rem;
 }
 
 .date_and_subject {
@@ -44,7 +46,7 @@
 
 .title {
   font-size: var(--font-size-little-title);
-  margin: 1rem 0;
+  margin: 1rem 0 5rem 0;
 }
 
 .writer_and_data_box {
@@ -53,8 +55,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 1rem;
-  border-bottom: 0.1px solid rgba(0, 0, 0, 0.3);
+  margin-bottom: 3rem;
 }
 
 .writer_box {
@@ -64,8 +65,8 @@
 }
 
 .writer_image {
-  width: 8rem;
-  height: 8rem;
+  width: 6.5rem;
+  height: 6.5rem;
   border-radius: 50%;
   border: 0.4px solid rgba(0, 0, 0, 0.1);
 }
@@ -105,7 +106,23 @@
   color: rgba(0, 0, 0, 0.7);
 }
 
+.divide_line {
+  width: 100%;
+  height: 0.4px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 .article {
   font-size: var(--font-size-normal);
-  padding: 5rem 3rem;
+  padding: 5rem 2.5rem 12rem 2.5rem;
+}
+
+.comment_box {
+  padding: 0 2.5rem;
+}
+
+.comment_text {
+  font-size: var(--font-size-big);
+  font-weight: 500;
+  margin-bottom: 1rem;
 }
