--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 60px;
+  height: 6rem;
   background-color: transparent;
   display: flex;
   flex-direction: row;
