페이지에 따라 헤더 색상 변경

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -59,3 +59,14 @@
 .scrolled .login_button {
   background-color: var(--color-blue);
 }
+
+/* 특정 페이지에서는 배경색 추가 */
+.colored {
+  /* background-image: linear-gradient(
+    to right bottom,
+    var(--color-blue),
+    var(--color-pink)
+  ); */
+  background-color: var(--color-blue);
+  box-shadow: none;
+}
